--- a/src/components/IconLock/style.scss
+++ b/src/components/IconLock/style.scss
@@ -1,10 +1,10 @@
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+	// margin: 0;
+	// padding: 0;
+	// box-sizing: border-box;
 	--locked-color: #5fadbf;
 	--unlocked-color: #ff5153;
-  }
+}
 
 .lock {
 	width: 24px;
