--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -22,6 +22,13 @@
 	margin-right: 10px;
 }
 
+.icon {
+	width: 60px;
+    background: yellow;
+    display: flex;
+    justify-content: center;
+}
+
 // img {
 // 	transition: transform .3s;
 // 	transform: scale(.8);
@@ -48,10 +55,22 @@
 
 
 
+.wrapper_nav {
+	position: absolute;
+	bottom: $spacing;
+	right: -40px;
 
+	&.wrapper_nav--left {
+		right: auto;
+		left: -40px;
+		justify-content: flex-end;
 
-
-
+		.button {
+			padding-left: 60px;
+			padding-right: $spacing;
+		}
+	}
+}
 
 
 
@@ -68,17 +87,17 @@ $prism-depth: $prism-length;
 $br: 3px;
 
 // Colors
-$text-light: #fff;
-$text-dark: #666;
-$blue: #03a9f4;
-$smoke: #f9f9fa;
-$coral: #ff5751;
-$navy-blue: #42509e;
-$green: #18567a;
+// $text-light: #fff;
+// $text-dark: #666;
+// $blue: #03a9f4;
+// $smoke: #f9f9fa;
+// $coral: #ff5751;
+// $navy-blue: #42509e;
+// $green: #18567a;
 
-* {
-	box-sizing: border-box;
-}
+// * {
+// 	box-sizing: border-box;
+// }
 
 // body{
 // 	font-family: Tahoma,Verdana,Segoe,sans-serif;
@@ -93,7 +112,7 @@ $green: #18567a;
 	margin: 60px auto;
 	perspective: 600px;
 	text-align: left;
-	font-size: 30px;
+	// font-size: 30px;
 }
 
 .rec-prism {
@@ -105,10 +124,14 @@ $green: #18567a;
 	transition: transform 0.5s ease-in;
 }
 
-.button {
-	align-self: flex-end;
-    margin-right: -43px;
-}
+// .button {
+// 	align-self: flex-end;
+//     margin-right: -43px;
+// }
+
+// .wrapper__content {
+// 	padding: 2 * $spacing;
+// }
 
 .face {
 	position: absolute;
@@ -116,196 +139,199 @@ $green: #18567a;
 	height: $prism-height;
 	// padding: $spacing;
 	background: white;
-	border: 3px solid $green;
+	border: 3px solid $colorSecondary;
 	border-radius: 3px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
 
-	.content {
-		color: $text-dark;
-		display: flex;
-		flex-direction: column;
-		width: 100%;
+	// .content {
+	// 	color: $text-dark;
+	// 	display: flex;
+	// 	flex-direction: column;
+	// 	width: 100%;
 
-		h2 {
-			font-size: 1.2em;
-			color: $green;
-		}
+	// 	h2 {
+	// 		// font-size: 1.2em;
+	// 		color: $green;
+	// 	}
 
-		.field-wrapper {
-			margin-top: $spacing*1.5;
-			position: relative;
+	// 	.field-wrapper {
+	// 		margin-top: $spacing*1.5;
+	// 		position: relative;
 
-			label {
-				position: absolute;
-				pointer-events: none;
-				font-size: 0.85em;
-				top: 40%;
-				left: 0;
-				transform: translateY(-50%);
-				transition: all ease-in 0.25s;
-				color: lighten($text-dark, 20%);
-			}
-			input[type="text"], input[type="password"], input[type="submit"], textarea {
-				appearance: none;
-				appearance: none;
-				&:focus {
-					outline: none;
-				}
-			}
-			input[type="text"], input[type="password"], textarea {
-				width: 100%;
-				border: none;
-				background: transparent;
-				line-height: 2em;
-				border-bottom: 1px solid $green;
-				color: $text-dark;
+	// 		label {
+	// 			position: absolute;
+	// 			pointer-events: none;
+	// 			font-size: 0.85em;
+	// 			top: 40%;
+	// 			left: 0;
+	// 			transform: translateY(-50%);
+	// 			transition: all ease-in 0.25s;
+	// 			color: lighten($text-dark, 20%);
+	// 		}
+	// 		input[type="text"], input[type="password"], input[type="submit"], textarea {
+	// 			appearance: none;
+	// 			appearance: none;
+	// 			&:focus {
+	// 				outline: none;
+	// 			}
+	// 		}
+	// 		input[type="text"], input[type="password"], textarea {
+	// 			width: 100%;
+	// 			border: none;
+	// 			background: transparent;
+	// 			line-height: 2em;
+	// 			border-bottom: 1px solid $green;
+	// 			color: $text-dark;
 
-				&::input-placeholder {
-					opacity: 0;
-				}
-				&::-moz-placeholder {
-					opacity: 0;
-				}
-				&:-ms-input-placeholder {
-					opacity: 0;
-				}
-				&:-moz-placeholder  {
-					opacity: 0;
-				}
-				&:focus, &:not(:placeholder-shown) {
-					+ label {
-						top: -35%;
-						color: $navy-blue;
-					}
-				}
-			}
-			input[type="submit"] {
-				appearance: none;
-				appearance: none;
-				cursor: pointer;
-				width: 100%;
-				background: $green;
-				line-height: 2em;
-				color: $text-light;
-				border: 1px solid $green;
-				border-radius: $br;
-				padding: $spacing/4;
+	// 			&::input-placeholder {
+	// 				opacity: 0;
+	// 			}
+	// 			&::-moz-placeholder {
+	// 				opacity: 0;
+	// 			}
+	// 			&:-ms-input-placeholder {
+	// 				opacity: 0;
+	// 			}
+	// 			&:-moz-placeholder  {
+	// 				opacity: 0;
+	// 			}
+	// 			&:focus, &:not(:placeholder-shown) {
+	// 				+ label {
+	// 					top: -35%;
+	// 					color: $navy-blue;
+	// 				}
+	// 			}
+	// 		}
+	// 		input[type="submit"] {
+	// 			appearance: none;
+	// 			appearance: none;
+	// 			cursor: pointer;
+	// 			width: 100%;
+	// 			background: $green;
+	// 			line-height: 2em;
+	// 			color: $text-light;
+	// 			border: 1px solid $green;
+	// 			border-radius: $br;
+	// 			padding: $spacing/4;
 
-				&:hover {
-					opacity: 0.9;
-				}
-				&:active {
-					transform: scale(0.96);
-				}
-			}
-			textarea {
-				resize: none;
-				line-height: 1em;
-				&:focus, &:not(:placeholder-shown) {
-					+ label {
-						top: -25%;
-					}
-				}
-			}
-		}
-	}
+	// 			&:hover {
+	// 				opacity: 0.9;
+	// 			}
+	// 			&:active {
+	// 				transform: scale(0.96);
+	// 			}
+	// 		}
+	// 		textarea {
+	// 			resize: none;
+	// 			line-height: 1em;
+	// 			&:focus, &:not(:placeholder-shown) {
+	// 				+ label {
+	// 					top: -25%;
+	// 				}
+	// 			}
+	// 		}
+	// 	}
+	// }
 
-	.thank-you-msg {
-		position: absolute;
-		width: 200px;
-		height: 130px;
-		text-align: center;
-		font-size: 2em;
-		color: $green;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
+	// .thank-you-msg {
+	// 	position: absolute;
+	// 	width: 200px;
+	// 	height: 130px;
+	// 	text-align: center;
+	// 	font-size: 2em;
+	// 	color: $green;
+	// 	left: 50%;
+	// 	top: 50%;
+	// 	transform: translate(-50%, -50%);
 
-		&:after {
-			position: absolute;
-			content: '';
-			width: 50px;
-			height: 25px;
-			border: 10px solid $green;
-			border-right: 0;
-			border-top: 0;
-			left: 50%;
-			top: 50%;
-			transform: translate(-50%, -50%) rotate(0deg) scale(0);
-			transform: translate(-50%, -50%) rotate(0deg) scale(0);
-			animation: success ease-in 0.15s forwards;
-			animation: success ease-in 0.15s forwards;
-			animation-delay: 2.5s;
-		}
-	}
+	// 	&:after {
+	// 		position: absolute;
+	// 		content: '';
+	// 		width: 50px;
+	// 		height: 25px;
+	// 		border: 10px solid $green;
+	// 		border-right: 0;
+	// 		border-top: 0;
+	// 		left: 50%;
+	// 		top: 50%;
+	// 		transform: translate(-50%, -50%) rotate(0deg) scale(0);
+	// 		transform: translate(-50%, -50%) rotate(0deg) scale(0);
+	// 		animation: success ease-in 0.15s forwards;
+	// 		animation: success ease-in 0.15s forwards;
+	// 		animation-delay: 2.5s;
+	// 	}
+	// }
 
-	&-front {
-		transform: rotateY(0deg) translateZ($prism-length/2);
-	}
-	&-top {
-		height: $prism-depth;
-		transform: rotateX(90deg) translateZ($prism-depth/2);
-	}
-	&-back {
-		transform: rotateY(180deg) translateZ($prism-length/2);
-	}
-	&-right {
-		transform: rotateY(90deg) translateZ($prism-length/2);
-	}
-	&-left {
-		transform: rotateY(-90deg) translateZ($prism-length/2);
-	}
-	&-bottom {
-		height: $prism-depth;
-		transform: rotateX(-90deg) translateZ($prism-height - ($prism-depth/2));
-	}
+
 }
 
-.nav {
-	margin: $spacing 0;
-	padding: 0;
-
-	li {
-		display: inline-block;
-		list-style-type: none;
-		font-size: 1em;
-		margin: 0 $spacing/2;
-		color: $navy-blue;
-		position: relative;
-		cursor: pointer;
-		padding: 10px;
-
-		&:after {
-			content: "";
-			position: absolute;
-			bottom: 0;
-			left: 0;
-			width: 20px;
-			border-bottom: 1px solid $navy-blue;
-			transition: all ease-in 0.25s;
-		}
-
-		&:hover:after {
-			width: 100%;
-		}
-	}
+.face-front {
+	transform: rotateY(0deg) translateZ($prism-length/2);
+}
+.face-top {
+	height: $prism-depth;
+	transform: rotateX(90deg) translateZ($prism-depth/2);
+}
+.face-back {
+	transform: rotateY(180deg) translateZ($prism-length/2);
+}
+.face-right {
+	transform: rotateY(90deg) translateZ($prism-length/2);
+}
+.face-left {
+	transform: rotateY(-90deg) translateZ($prism-length/2);
+}
+.face-bottom {
+	height: $prism-depth;
+	transform: rotateX(-90deg) translateZ($prism-height - ($prism-depth/2));
 }
 
-.psw, .signup, .singin{
-	display: block;
-	margin: $spacing 0;
-	font-size: 0.75em;
-	text-align: center;
-	color: $navy-blue;
-	cursor: pointer;
-}
 
-small {
-	font-size: 0.7em;
-}
+// .nav {
+// 	margin: $spacing 0;
+// 	padding: 0;
+
+// 	li {
+// 		display: inline-block;
+// 		list-style-type: none;
+// 		font-size: 1em;
+// 		margin: 0 $spacing/2;
+// 		color: $navy-blue;
+// 		position: relative;
+// 		cursor: pointer;
+// 		padding: 10px;
+
+// 		&:after {
+// 			content: "";
+// 			position: absolute;
+// 			bottom: 0;
+// 			left: 0;
+// 			width: 20px;
+// 			border-bottom: 1px solid $navy-blue;
+// 			transition: all ease-in 0.25s;
+// 		}
+
+// 		&:hover:after {
+// 			width: 100%;
+// 		}
+// 	}
+// }
+
+// .psw, .signup, .singin{
+// 	display: block;
+// 	margin: $spacing 0;
+// 	font-size: 0.75em;
+// 	text-align: center;
+// 	color: $navy-blue;
+// 	cursor: pointer;
+// }
+
+// small {
+// 	font-size: 0.7em;
+// }
 @keyframes success {
 	from {
 		transform: translate(-50%, -50%) rotate(0) scale(0);
