--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import "./css/_variables";
+@import "./css/_normalize";
 
 body,
 html,
@@ -10,6 +11,7 @@ html,
 
 #root {
 	font-family: 'Dosis', sans-serif;
-	color: $colorPrimary;
+	color: $colorSecondary;
+	// font-size: 10px;
 }
 
