--- a/src/index.scss
+++ b/src/index.scss
@@ -15,3 +15,16 @@ html,
 	// font-size: 10px;
 }
 
+button {
+	background-color: transparent;
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	transition: color .3s;
+	text-decoration: underline;
+
+	&:hover {
+		color: $colorPrimary;
+	}
+}
+
